--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Where in the World? is a web application that allows you to search for countries and view their information."
+    />
+    <meta
+      name="keywords"
+      content="Where in the World?, Country, Capital, Population, Region, Subregion, Flag"
+    />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <title>Where in the World?</title>
   </head>
   <body>
