--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       content="Where in the World?, Country, Capital, Population, Region, Subregion, Flag"
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="preconnect" href="https://restcountries.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Where in the World?</title>
   </head>
   <body>
